--- a/testSite/views/index.jade
+++ b/testSite/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
-block content
+block append content
 	form#login(method='post')
 		input(type='text', name='user[name]')
 		input(type='text', name='user[password]')
