--- a/testSite/views/layout.jade
+++ b/testSite/views/layout.jade
@@ -5,9 +5,10 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
         link(rel='stylesheet', href='/bootstrap/css/bootstrap-theme.min.css')
+        script(src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
+        script(src='https://cdn.firebase.com/v0/firebase.js')
         block head
     body    
         #content
             block content
-        script(src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
         script(src='/bootstrap/js/bootstrap.min.js')
