--- a/testSite/views/login.jade
+++ b/testSite/views/login.jade
@@ -2,8 +2,13 @@ extends layout
 block append head
 block append content
 	#formFrame
-		form#login(action='/login', method='POST')
+		form#loginAccount(action='/loginAccount', method='POST')
 			input(name='username', type='text', placeholder='Username')
 			input(name='password', type='text', placeholder='Password')
 			input(type='submit', value='Login', name='button')
+		form#createAccount(action='/createAccount', method='POST')
+			input(name='username', type='text', placeholder='Username')
+			input(name='password', type='text', placeholder='Password')
+			input(name='confirmPassword', type='text', placeholder='Confirm Password')
+			input(type='submit', value='Create Account', name='button')
 		script(src='js/login.js')
