--- a/testSite/views/stylesheets/index.styl
+++ b/testSite/views/stylesheets/index.styl
@@ -1,19 +1,29 @@
+.header
+    h1
+        font-family "Helvetica"
+        font-weight bold
+        color #fff
+        letter-spacing -5px
+        font-size 100px
+        line-height 250px
+
 .twitter-typeahead 
     .tt-hint
         display block
         height 34px
         padding 4px 12px
-        padding-top 8px
         font-size 14px
         line-height 1.428571429
         border 1px solid transparent
         border-radius 4px
         color silver
         margin-bottom 0
+        width 100%
+        top 16px
     .tt-query
         margin-bottom 0
     width 100%
-    padding-top 2px
+    padding-top 16px
 
 .tt-dropdown-menu 
     min-width 160px
@@ -39,6 +49,7 @@
     padding 3px 20px
     p
         margin 0
+
 .tt-is-under-cursor
     color: #fff;
     background-color: #000000;
@@ -58,8 +69,10 @@
     margin-top -20px
 .btn-large
     background-color green
-.top-buffer 
-    margin-top 30px
+.top-buffer-large
+    margin-top 700px
+.top-buffer-small
+    margin-top 50px
 .badge
     vertical-align middle 
     margin-top 0.5em
