--- a/testSite/public/stylesheets/index.css
+++ b/testSite/public/stylesheets/index.css
@@ -1,18 +1,27 @@
+.header h1 {
+  font-family: "Helvetica";
+  font-weight: bold;
+  color: #fff;
+  letter-spacing: -5px;
+  font-size: 100px;
+  line-height: 250px;
+}
 .twitter-typeahead {
   width: 100%;
-  padding-top: 2px;
+  padding-top: 16px;
 }
 .twitter-typeahead .tt-hint {
   display: block;
   height: 34px;
   padding: 4px 12px;
-  padding-top: 8px;
   font-size: 14px;
   line-height: 1.428571429;
   border: 1px solid transparent;
   border-radius: 4px;
   color: #c0c0c0;
   margin-bottom: 0;
+  width: 100%;
+  top: 16px;
 }
 .twitter-typeahead .tt-query {
   margin-bottom: 0;
@@ -68,8 +77,11 @@
 .btn-large {
   background-color: #008000;
 }
-.top-buffer {
-  margin-top: 30px;
+.top-buffer-large {
+  margin-top: 700px;
+}
+.top-buffer-small {
+  margin-top: 50px;
 }
 .badge {
   vertical-align: middle;
