--- a/testSite/public/stylesheets/index.css
+++ b/testSite/public/stylesheets/index.css
@@ -1,7 +1,7 @@
 .header h1 {
   font-family: "Helvetica";
   font-weight: bold;
-  color: #fff;
+  color: #ccc;
   letter-spacing: -5px;
   font-size: 100px;
   line-height: 250px;
@@ -100,4 +100,7 @@
   margin-left: 0px;
   margin-right: 0px;
   padding-top: 10px;
+}
+.call-to-action h1 {
+  color: #aaa;
 }
