--- a/testSite/views/stylesheets/index.styl
+++ b/testSite/views/stylesheets/index.styl
@@ -2,7 +2,7 @@
     h1
         font-family "Helvetica"
         font-weight bold
-        color #fff
+        color #CCCCCC
         letter-spacing -5px
         font-size 100px
         line-height 250px
@@ -88,5 +88,8 @@
     margin-left 0px
     margin-right 0px
     padding-top 10px
+.call-to-action
+    h1
+        color: #AAAAAA
 
 
