--- a/testSite/public/stylesheets/index.css
+++ b/testSite/public/stylesheets/index.css
@@ -1,38 +1,91 @@
+.header {
+  color: #f9f3d1;
+}
+.header h2 {
+  margin-top: 0px;
+  font-size: 35px;
+  margin-bottom: 50px;
+}
 .header h1 {
   font-family: "Helvetica";
   font-weight: bold;
-  color: #ccc;
+  color: #f9f3d1;
   letter-spacing: -5px;
   font-size: 100px;
-  line-height: 250px;
+  line-height: 150px;
+  margin-bottom: 0px;
+  margin-top: 25px;
+}
+.header h3 {
+  color: #f9f3d1;
+}
+.login a {
+  color: #fff;
+  background-color: #2c4762;
+  border-color: #2c4762;
+  background-image: none;
+  box-shadow: none;
+  float: right;
+}
+.login a:hover {
+  background-color: #e38d13;
+  background-image: none;
 }
 .twitter-typeahead {
+  height: 64px;
   width: 100%;
   padding-top: 16px;
 }
 .twitter-typeahead .tt-hint {
   display: block;
-  height: 34px;
+  height: 64px;
   padding: 4px 12px;
-  font-size: 14px;
+  font-size: 24px;
   line-height: 1.428571429;
   border: 1px solid transparent;
-  border-radius: 4px;
   color: #c0c0c0;
   margin-bottom: 0;
   width: 100%;
   top: 16px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background-color: #f9f3d1;
 }
 .twitter-typeahead .tt-query {
   margin-bottom: 0;
+  background-color: #f9f3d1;
+}
+.twitter-typeahead .form-control {
+  height: 64px;
+  font-size: 24px;
+  border-color: transparent;
+  background-color: #f9f3d1;
+}
+.modal-body {
+  border-color: transparent;
+}
+.modal-body input {
+  width: 80%;
+  margin: 0 auto;
+}
+.modal-body span {
+  text-align: left;
+  font-size: 16px;
+  padding-left: 26px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  line-height: 1.5px;
 }
 .tt-dropdown-menu {
   min-width: 160px;
-  margin-top: 2px;
+  margin-top: 15px;
   padding: 5px 0;
   background-color: #fff;
   border: 1px solid #ccc;
   width: 100%;
+  font-size: 24px;
   *border-right-width: 2px;
   *border-bottom-width: 2px;
   -webkit-border-radius: 6px;
@@ -69,19 +122,37 @@
 .tt-is-under-cursor a {
   color: #fff;
 }
+#content {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -20px;
+}
 .jumbotron#countertop {
+  min-height: 100%;
+  padding-top: 30px;
+  height: 100%;
+  margin-bottom: 0px;
   background: url("../images/wood2.jpg") no-repeat center center fixed;
   background-size: cover;
-  margin-top: -20px;
+}
+.jumbotron#countertop .container {
+  overflow: hidden;
 }
 .btn-large {
   background-color: #008000;
 }
 .top-buffer-large {
   margin-top: 700px;
+  line-height: 700px;
 }
 .top-buffer-small {
   margin-top: 50px;
+  line-height: 50px;
+}
+.top-buffer-really-small {
+  margin-top: 25px;
+  line-height: 25px;
 }
 .badge {
   vertical-align: middle;
@@ -101,6 +172,35 @@
   margin-right: 0px;
   padding-top: 10px;
 }
-.call-to-action h1 {
-  color: #aaa;
+.add-ingredient .input-group-btn {
+  padding-top: 16px;
+}
+.add-ingredient .input-group-btn .btn {
+  font-size: 24px;
+  height: 64px;
+  background-color: #2c4762;
+  border-color: #2c4762;
+  background-image: none;
+  box-shadow: none;
+}
+.add-ingredient .input-group-btn .btn:hover {
+  background-color: #e38d13;
+  background-image: none;
+}
+.call-to-action {
+  color: #f9f3d1;
+}
+a.list-group-item {
+  color: #fff;
+  background-color: transparent;
+  border-color: transparent;
+}
+body {
+  min-height: 100%;
+  background: url("../images/wood2.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+html {
+  min-height: 100%;
+  height: 100%;
 }
