--- a/testSite/views/stylesheets/index.styl
+++ b/testSite/views/stylesheets/index.styl
@@ -168,6 +168,20 @@ font-size = 24px
             &:hover
                 background-color #e38d13
                 background-image none
+.entered_ingredients
+    color font-color
+    font-size 20px
+    .ingredient_quantity
+        padding-right 25px
+    .quantityAdder
+        cursor: pointer;
+.recipes_returned
+    color font-color
+    font-size 30px
+    text-align center
+
+
+
 
 .call-to-action
     color: font-color
