--- a/testSite/public/stylesheets/index.css
+++ b/testSite/public/stylesheets/index.css
@@ -190,24 +190,25 @@
   color: #f9f3d1;
   font-size: 20px;
 }
-.entered_ingredients .ingredient_quantity {
-  padding-right: 25px;
-}
 .entered_ingredients .quantityAdder {
   cursor: pointer;
 }
-.recipes_returned {
+.recipes_returned h2 {
   color: #f9f3d1;
   font-size: 30px;
   text-align: center;
 }
+.recipes_returned a.list-group-item {
+  color: #f9f3d1;
+  font-size: 20px;
+  text-align: center;
+  background-color: transparent;
+}
+.recipes_returned a.list-group-item:hover {
+  background-color: #000;
+}
 .call-to-action {
   color: #f9f3d1;
-}
-a.list-group-item {
-  color: #fff;
-  background-color: transparent;
-  border-color: transparent;
 }
 body {
   min-height: 100%;
