--- a/testSite/views/stylesheets/index.styl
+++ b/testSite/views/stylesheets/index.styl
@@ -4,6 +4,7 @@ a.list-group-item
     //color white
     //background-color transparent
     //border-color transparent
+
 .header
     color font-color
     h2
@@ -79,6 +80,12 @@ a.list-group-item
         margin-bottom 0px
         line-height 1.5px
     
+.modal-dialog
+    h3
+        color = #000000
+#bitch
+    color = #000000
+    color = #000000
 .tt-dropdown-menu 
     min-width 160px
     margin-top 15px
@@ -132,6 +139,9 @@ a.list-group-item
     background-size cover
     .container
         overflow hidden
+.submitRecipe
+.loginButton
+    font-size 24px
 
 .btn-large
     background-color green
@@ -154,6 +164,11 @@ a.list-group-item
     margin-top 0px
     margin-bottom 0px
     line-height 30px
+.unselectable {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
 .add-ingredient
     padding-left 0px
     padding-right 0px
@@ -163,15 +178,19 @@ a.list-group-item
     .input-group-btn
         padding-top 16px
         .btn
-            font-size 24px
             height 64px
-            background-color #2c4762
-            border-color #2c4762
-            background-image none
-            box-shadow none
-            &:hover
-                background-color #e38d13
-                background-image none
+            font-size 24px
+
+.btn
+    background-color #2c4762
+    border-color #2c4762
+    background-image none
+    box-shadow none
+    &:hover
+        background-color #e38d13
+        background-image none
+.accountSettings
+    font-size 20px
 .entered_ingredients
     color font-color
     font-size 20px
